- fix spacing

--- a/less/custom.less
+++ b/less/custom.less
@@ -82,6 +82,10 @@
 #repo-list-container {
     margin-top: -20px;
 
+    #repo-list {
+        overflow: auto;
+    }
+
     .card-panel {
         cursor: pointer;
     }
